Solving that bipartite graphs have unimodular adjacency mnatrix.

--- a/definitions/definicionesdehtellez.tex
+++ b/definitions/definicionesdehtellez.tex
@@ -2,6 +2,7 @@
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\Q}{\mathbb{Q}}
+\newcommand{\F}{\mathds{F}}
 
 \newcommand{\E}{\mathbb{E}}
 \renewcommand{\P}{\mathbb{P}}
@@ -10,7 +11,6 @@
 \newcommand{\mcomment}[1]{\;\;\;\;\mbox{{\scriptsize#1}}}
 \newcommand{\lcomment}[1]{\;\;\;\;\mbox{{\scriptsize(#1}}}
 \newcommand{\rcomment}[1]{\;\;\;\;\mbox{{\scriptsize\;\;#1)}}}
-\newcommand{\F}{\mathscr{F}}
 \newcommand{\paren}[1]{\ensuremath{\left(#1\right)}}
 \newcommand{\indic}{\mathds{1}}
 \newcommand{\pn}{\par\null}
