--- a/Homework1/homework1.tex
+++ b/Homework1/homework1.tex
@@ -1,2 +1,4 @@
 ﻿\part{Homework 1}  
     \input{Homework1/DeMorgansLawSetTheory.tex}
+    \input{Homework1/DeMorgansLawsOrthogonalComplement.tex}
+    \input{Homework1/AdjacencyMatrixAreUnimodular.tex}
