--- a/CombinatorialOptimization.tex
+++ b/CombinatorialOptimization.tex
@@ -1,95 +1,1 @@
-﻿\documentclass[oneside]{book}
-
-\usepackage{amsthm}
-\usepackage{color}
-\definecolor{azul}{RGB}{20,40,140}
-\usepackage{courier}
-\usepackage{dsfont}
-\usepackage{embedfile}
-\usepackage{enumitem}
-\usepackage[scale={.8,.85}]{geometry}
-\usepackage[utf8]{inputenc}
-\usepackage[colorlinks,linkcolor=azul, citecolor=azul,urlcolor=azul]{hyperref}
-\usepackage{listings}
-\usepackage{mathrsfs}
-\usepackage{mathtools}
-\usepackage{titlesec}
-
-\titleformat{\chapter}[display]
-    {\normalfont\huge\bfseries}{\thechapter}{20pt}{\Huge}
-\titlespacing*{\chapter}{0pt}{0pt}{40pt}
-
-\allowdisplaybreaks
-\setlength\parindent{0pt}
-
-\mathtoolsset{showonlyrefs}
-
-%---------------------------------------------------------------------------
-\newtheorem{theorem}{Theorem}
-\newtheorem{acknowledgement}[theorem]{Acknowledgement}
-\newtheorem{algorithm}[theorem]{Algorithm}
-\newtheorem{axiom}[theorem]{Axiom}
-\newtheorem{case}[theorem]{Case}
-\newtheorem{claim}[theorem]{Claim}
-\newtheorem{conclusion}[theorem]{Conclusion}
-\newtheorem{condition}[theorem]{Condition}
-\newtheorem{conjecture}[theorem]{Conjecture}
-\newtheorem{corollary}[theorem]{Corollary}
-\newtheorem{criterion}[theorem]{Criterion}
-\newtheorem{definition}[theorem]{Definition}
-\newtheorem{example}[theorem]{Example}
-\newtheorem{exercise}[theorem]{Exercise}
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{notation}[theorem]{Notation}
-\newtheorem{problem}[theorem]{Problem}
-\newtheorem{proposition}[theorem]{Proposition}
-\newtheorem{remark}[theorem]{Remark}
-\newtheorem{solution}[theorem]{Solution}
-\newtheorem{summary}[theorem]{Summary}
-%---------------------------------------------------------------------------
-\input{definitions/definicionesdehtellez.tex}
-
-\numberwithin{chapter}{part}
-\numberwithin{section}{chapter}
-\numberwithin{subsection}{section}
-\numberwithin{subsubsection}{subsection}
-\numberwithin{paragraph}{subsubsection}
-\numberwithin{subparagraph}{paragraph}
-\numberwithin{equation}{subparagraph}
-\numberwithin{equation}{paragraph}
-\numberwithin{equation}{subsubsection}
-\numberwithin{equation}{subsection}
-\numberwithin{equation}{section}
-\numberwithin{equation}{chapter}
-\numberwithin{equation}{part}
-
-\normalfont
-\begin{document}
-
-		\frontmatter
-		\title{Combinatorial Optimization}
-		\author{Héctor Manuel Téllez Gómez}
-		\date{2013/Aug/16}
-		\maketitle
-
-		\tableofcontents
-
-		\mainmatter
-		\chapter*{Note for the readers:}
-			The goal on writing this in english instead of writing it in my first language (spanish) is because 
-			this way I can start building a portfolio that could not be as important as a research project, but
-			it is work after all. So it would be better to have something to show that nothing to show at all, 
-			and much better if the audience capable of read it is as wide as possible.\pn
-			
-			As my first language is not english, this text could have a lot of mispellings and
-			bad use of english. I apologize in advance and I'll try to be as careful as possible.\pn
-			
-			Here is a link to this project version controller repository:\par
-			\href{https://github.com/bloodyvesp/CombinatorialOptimization}{https://github.com/bloodyvesp/CombinatorialOptimization}\par
-			There you can see what are the changes that have ocurred along all this project's lifetime.\pn
-			
-			If you want to leave comments you can do it there, where anyone else is able to notice it. Or you could 
-			write directly to my personal e-mail address, which is: \texttt{tellez.hector@gmail.com} where it will be read only
-			by me.
-    \input{Homework1/Homework1.tex}
-\end{document}
+﻿\input{Template/main.tex}
