--- a/Homework1/DeMorgansLawsOrthogonalComplement.tex
+++ b/Homework1/DeMorgansLawsOrthogonalComplement.tex
@@ -33,7 +33,7 @@
     Particularly if $A' \subset A$ and $v \in A^\perp$ we have that $v \cdot x = 0$ for all $x \in A'$. Given that $\paren{A \wedge B} \subset A$, 
     we have that $A^\perp \subset (A \wedge B)^\perp$.\pn
         
-    Now we want to show that $(A \wedge B)^\perp \subset A^\perp \vee B^\perp$. Suppose that $x \notin A^\perp \vee B^\perp$. Particularly, 
+    Now we want to show that $(A \wedge B)^\perp \subset \paren{A^\perp \vee B^\perp}$. Suppose that $x \notin \paren{A^\perp \vee B^\perp}$. Particularly, 
     $x \notin A^\perp$. But we showed before that $A^\perp \subset (A \cap B)^\perp$, so we conclude that $x \notin (A \cap B)^\perp$.\pn
     
     For \eqref{p:orthogonal_de_morgan_second} we are going to use the fact that if $C \subset V$ is a vector subspace then
