Finishing Hall's theorem.

--- a/document.tex
+++ b/document.tex
@@ -10,3 +10,4 @@
 \input{NoteForTheReaders/NoteForTheReaders.tex}
 \input{Homework1/Homework1.tex}
 \input{Homework2/Homework2.tex}
+\input{Homework3/Homework3.tex}
