--- a/document.tex
+++ b/document.tex
@@ -11,3 +11,4 @@
 \input{Homework1/Homework1.tex}
 \input{Homework2/Homework2.tex}
 \input{Homework3/Homework3.tex}
+\input{Inequality/Inequality.tex}
