--- a/Inequality/InequalityAnswer.tex
+++ b/Inequality/InequalityAnswer.tex
@@ -1,13 +1,13 @@
 ﻿\chapter{Inequality}
 
-    \begin{theorem}
+    \begin{problem}
         Let be $0 \leq p \leq s \leq t \leq q$ real numbers such that
         \begin{align}\label{inequality_1}
             p + q = s + t.
         \end{align}
         
         Prove that $pq < st$.
-    \end{theorem}
+    \end{problem}
     
     \begin{proof}
         Just a lot of simple algebra.
@@ -47,7 +47,7 @@
             
         What we are asked to prove is that $f(p) \leq f(s)$.\pn
         
-        So, lets analice $f$ using simple calculus. First of all, $f$ is a polinomial, and then its continuous. Now
+        So, lets analyze $f$ using simple calculus. First of all, $f$ is a polinomial, and then its continuous. Now
         lets check what we can learn from its derivative\pn
         
         \begin{align}
