Finishing complementary vector spaces exercise (second of two) and improving previous problems format.

--- a/Inequality/InequalityAnswer.tex
+++ b/Inequality/InequalityAnswer.tex
@@ -1,13 +1,13 @@
 ﻿\chapter{Inequality}
 
-    \begin{problem}
+    \prob{
         Let be $0 \leq p \leq s \leq t \leq q$ real numbers such that
         \begin{align}\label{inequality_1}
             p + q = s + t.
         \end{align}
         
         Prove that $pq < st$.
-    \end{problem}
+    }
     
     \begin{proof}
         Just a lot of simple algebra.
