--- a/document.tex
+++ b/document.tex
@@ -14,3 +14,4 @@
 \input{Inequality/Inequality.tex}
 \input{PetersenIsNotHamiltonian/PetersenIsNotHamiltonian.tex}
 \input{ComplementaryVectorSpaces1/ComplementaryVectorSpaces1.tex}
+\input{ComplementaryVectorSpaces2/ComplementaryVectorSpaces2.tex}
