--- a/ComplementaryVectorSpaces1/ComplementaryVectorSpaces1Answer.tex
+++ b/ComplementaryVectorSpaces1/ComplementaryVectorSpaces1Answer.tex
@@ -2,13 +2,13 @@
     The order of the following two excercises has been changed because the second one is
     a very particular case of this one, so it is convenient to solve this one first.
 
-    \begin{theorem}
+    \prob{
         Let $A$ be a $m \times n$ real matrix with linearly independent rows.
         Lets define $H = \{x \in \R^n | Ax^T = 0 \}$ and 
         $L = \{ y \in \R^n | y = \lambda A, \; \lambda \in \R^m\}$.\pn
         
         Prove that $H$ and $L$ are orthogonal complements of each other.
-    \end{theorem}
+    }
     
     \begin{proof}
         What we need to proove is that $H = L^\perp$.\pn
