--- a/PetersenIsNotHamiltonian/PetersenIsNotHamiltonianAnswer.tex
+++ b/PetersenIsNotHamiltonian/PetersenIsNotHamiltonianAnswer.tex
@@ -1,8 +1,8 @@
 ﻿\chapter{Petersen's Graph Is Not Hamiltonian}
 
-    \begin{problem}
+    \prob{
         Prove that Petersen's graph is not hamiltonian.
-    \end{problem}
+    }
     
     \begin{proof}
         Let's remember that a \textbf{hamiltonian graph} is a graph that contains a \textbf{hamiltonian cycle} and a hamiltonian cycle is
