Changing homework1 format.

--- a/ComplementaryVectorSpaces1/ComplementaryVectorSpaces1.tex
+++ b/ComplementaryVectorSpaces1/ComplementaryVectorSpaces1.tex
@@ -1,2 +1,2 @@
-﻿\part{Complementary Vector Spaces (1)}  
+﻿\chapter{Complementary Vector Spaces (1)}  
     \input{ComplementaryVectorSpaces1/ComplementaryVectorSpaces1Answer.tex}
