--- a/ComplementaryVectorSpaces2/ComplementaryVectorSpaces2.tex
+++ b/ComplementaryVectorSpaces2/ComplementaryVectorSpaces2.tex
@@ -1,2 +1,2 @@
-﻿\part{Complementary Vector Spaces (2)}  
+﻿\chapter{Complementary Vector Spaces (2)}  
     \input{ComplementaryVectorSpaces2/ComplementaryVectorSpaces2Answer.tex}
