--- a/PetersenIsNotHamiltonian/PetersenIsNotHamiltonian.tex
+++ b/PetersenIsNotHamiltonian/PetersenIsNotHamiltonian.tex
@@ -1,2 +1,2 @@
-﻿\part{Petersen's Graph Is Not Hamiltonian}  
+﻿\chapter{Petersen's Graph Is Not Hamiltonian}  
     \input{PetersenIsNotHamiltonian/PetersenIsNotHamiltonianAnswer.tex}
