--- a/document.tex
+++ b/document.tex
@@ -8,7 +8,10 @@
 
 \mainmatter
 \input{NoteForTheReaders/NoteForTheReaders.tex}
-\input{Homework1/Homework1.tex}
+\input{AdjacencyMatrixAreUnimodular/AdjacencyMatrixAreUnimodular.tex}
+\input{DeMorgansLawSetTheory/DeMorgansLawSetTheory.tex}
+\input{DeMorgansLawsOrthogonalComplement/DeMorgansLawsOrthogonalComplement.tex}
+
 \input{Homework2/Homework2.tex}
 \input{Homework3/Homework3.tex}
 \input{Inequality/Inequality.tex}
