--- a/document.tex
+++ b/document.tex
@@ -11,9 +11,8 @@
 \input{AdjacencyMatrixAreUnimodular/AdjacencyMatrixAreUnimodular.tex}
 \input{DeMorgansLawSetTheory/DeMorgansLawSetTheory.tex}
 \input{DeMorgansLawsOrthogonalComplement/DeMorgansLawsOrthogonalComplement.tex}
-
-\input{Homework2/Homework2.tex}
-\input{Homework3/Homework3.tex}
+\input{OptimalAssignmentExample/OptimalAssignmentExample.tex}
+\input{HallTheorem/HallTheorem.tex}
 \input{Inequality/Inequality.tex}
 \input{PetersenIsNotHamiltonian/PetersenIsNotHamiltonian.tex}
 \input{ComplementaryVectorSpaces1/ComplementaryVectorSpaces1.tex}
