--- a/ComplementaryVectorSpaces2/ComplementaryVectorSpaces2.tex
+++ b/ComplementaryVectorSpaces2/ComplementaryVectorSpaces2.tex
@@ -1,2 +1,12 @@
-﻿\chapter{Complementary Vector Spaces (2)}  
-    \input{ComplementaryVectorSpaces2/ComplementaryVectorSpaces2Answer.tex}
+﻿\chapter{Complementary Vector Spaces (2)}
+
+    \prob{
+        Let be $a \in \R^n$, $H = \{x \in \R^n | ax^T = 0\}$ an hiperplane and
+        $L = \{ y \in \R^n | y = \lambda a, \lambda \in \R\}$.\pn
+        
+        Prove that $H$ and $L$ are orthogonal complements of each other.
+    }
+    
+    \begin{proof}
+        This problem is a particular case of the previous one with $m = 1$.        
+    \end{proof}
