Adding and solving polymatroid problem.

--- a/document.tex
+++ b/document.tex
@@ -17,3 +17,4 @@
 \input{PetersenIsNotHamiltonian/PetersenIsNotHamiltonian.tex}
 \input{ComplementaryVectorSpaces1/ComplementaryVectorSpaces1.tex}
 \input{ComplementaryVectorSpaces2/ComplementaryVectorSpaces2.tex}
+\input{PermutohedronVerticesAsPolymatroid/PermutohedronVerticesAsPolymatroid.tex}
