--- a/PermutohedronVerticesAsPolymatroid/PermutohedronVerticesAsPolymatroid.tex
+++ b/PermutohedronVerticesAsPolymatroid/PermutohedronVerticesAsPolymatroid.tex
@@ -60,8 +60,8 @@
         we have only one vertex there. In the second step, we choose one of the $n$ zero-equalities to be loose and its corresponding variable will get the value $n$, 
         so there we have another $n = \frac{n!}{(n-1)!}$ vertices. In the third step, we choose one of the $n-1$ zero-equalities to be loose and its corresponding
         variable will get the value $n-1$, so there we have another $n (n-1) = \frac{n!}{(n-2)!}$ vertices. In the general step, we have to choose one of the $n-m$ 
-        equalities to be loose and its corresponding variable will get the value $n-m$, and there we will get another $n (n-1) \cdots (n-m)$ and this will repeat 
-        until $m = n-1$ (when we have to choose the only remaining zero-equality to be loosen and its corresponding variable will get the value $1$).\pn
+        equalities to be loose and its corresponding variable will get the value $n-m$, and there we will get another $n (n-1) \cdots (n-m) = \frac{n!}{(n-m-1)!}$ and 
+        this will repeat until $m = n-1$ (when we have to choose the only remaining zero-equality to be loosen and its corresponding variable will get the value $1$).\pn
         
         So, in the end we have
         \begin{align}
