Solving "adjacency matrices of directed graph are unimodular".

--- a/AdjacencyMatrixAreUnimodular/AdjacencyMatrixAreUnimodular.tex
+++ b/AdjacencyMatrixAreUnimodular/AdjacencyMatrixAreUnimodular.tex
@@ -1,5 +1,5 @@
 ﻿\chapter{Adjacency Matrix Of Bipartite Graphs Are Unimodular}
-
+\label{AdjacencyMatrixOfBipartiteGraphsAreUnimodular}
 \prob{
     Let $G = (V, E)$ be a bipartite graph. And let $M$ be its adjacency matrix.
     Prove that if $A$ is a square submatrix of $M$ then $det(A) \in \{0, -1, 1\}$.
