--- a/document.tex
+++ b/document.tex
@@ -18,3 +18,5 @@
 \input{ComplementaryVectorSpaces1/ComplementaryVectorSpaces1.tex}
 \input{ComplementaryVectorSpaces2/ComplementaryVectorSpaces2.tex}
 \input{PermutohedronVerticesAsPolymatroid/PermutohedronVerticesAsPolymatroid.tex}
+\input{AdjacencyMatrixOfDirectedGraphsAreUnimodular/AdjacencyMatrixOfDirectedGraphsAreUnimodular.tex}
+\input{Simplex/Simplex.tex}
