--- a/AdjacencyMatrixOfDirectedGraphsAreUnimodular/AdjacencyMatrixOfDirectedGraphsAreUnimodular.tex
+++ b/AdjacencyMatrixOfDirectedGraphsAreUnimodular/AdjacencyMatrixOfDirectedGraphsAreUnimodular.tex
@@ -1,4 +1,4 @@
-﻿\chapter{Adjacency Matrix Directed Graphs Are Unimodular}
+﻿\chapter{Adjacency Matrix Of Directed Graphs Are Unimodular}
 
 \prob{
     Let $G = (V, E)$ be a directed graph. And let $M$ be its adjacency matrix.
@@ -8,7 +8,7 @@
 \begin{proof}
     The proof of this statement is completily analog to the one of [\ref{AdjacencyMatrixOfBipartiteGraphsAreUnimodular}].\pn
     
-    Again, the proof will be by induction of the dimension $n$ of $A$.\pn
+    Again, the proof will be by induction over the dimension $n$ of $A$.\pn
     
     If $n=1$, then the statement is straightforward true as the entries of an adjacency matrix of a directed graph are always
     $1$, $-1$ or $0$. Then its determintant will be $1$, $-1$ or $0$ respectivelly.\pn
