Adding shortest path algorithms.

--- a/Simplex/Simplex.tex
+++ b/Simplex/Simplex.tex
@@ -1,4 +1,4 @@
-﻿\chapter{Linear programing examples}
+﻿\chapter{Linear Programing Examples}
 
 \prob{
     Solve the two examples given as homework.
