--- a/document.tex
+++ b/document.tex
@@ -20,3 +20,4 @@
 \input{PermutohedronVerticesAsPolymatroid/PermutohedronVerticesAsPolymatroid.tex}
 \input{Simplex/Simplex.tex}
 \input{AdjacencyMatrixOfDirectedGraphsAreUnimodular/AdjacencyMatrixOfDirectedGraphsAreUnimodular.tex}
+\input{ShortestPath/ShortestPath.tex}
