--- a/ShortestPath/ShortestPath.tex
+++ b/ShortestPath/ShortestPath.tex
@@ -1,7 +1,7 @@
 \chapter{Shortest path}
 \normalfont
 This is no listed as part of the homeworks. But here are the implementations of some of the ``Shortest path'' algorithms and tools
-that we reviewed in class. Again implemented in Octave (MathLab).\pn
+that we reviewed in class. Again implemented in Octave (MathLab), and again, you can download the code from the github repository. \pn
 
 The matrix tropical product implementation.
 \ttfamily   
