--- a/document.tex
+++ b/document.tex
@@ -1,7 +1,7 @@
 \frontmatter
 \title{Combinatorial Optimization}
 \author{Héctor Manuel Téllez Gómez}
-\date{2013/Aug/16}
+\date{2013/Aug - 2013/Dic}
 \maketitle
 
 \tableofcontents
