--- a/Simplex/Simplex.tex
+++ b/Simplex/Simplex.tex
@@ -81,6 +81,6 @@
     It took \texttt{4} iterations for the first phase and \texttt{2} iterations for the second phase.\pn
     
     These two examples took 16 iterations, that is 16 matrix inversions, and more than 80 matrix multiplications, I could have gave up
-    after 10 matrix multiplications (which are far more than 500 integer sums and multiplications), so after all the pain in debugging the 
+    after 10 matrix multiplications (which are far more than 500 integer sums and multiplications), so despite all the pain in debugging the 
     program it was totally worth it.
 \end{proof}
